--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico">
     <link id="theme-link" rel="stylesheet" href="/themes/aura-light-purple/theme.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNIFY BACK OFFICE</title>
+    <title>KOSCA SOLUTION</title>
   </head>
 
   <body>
